fix: backdrop filter and gap

--- a/styles/base.css
+++ b/styles/base.css
@@ -124,7 +124,7 @@ nav a:hover::after {
     right: 0;
     background-color: rgba(68, 2, 2, 0.7); 
     backdrop-filter: blur(10px);
-    padding: 1.5rem;
+    -webkit-backdrop-filter: blur(10px);    padding: 1.5rem;
     display: none;
     gap: 2.2rem;
     flex-direction: column;
